# learn_rust

./: .gitignore  Cargo.toml  LICENSE  README.md
adder/src/: lib.rs
base_code/: Cargo.toml  README.md
base_code/src/: main.rs
base_code/src/a_variable/: mod.rs
base_code/src/c_function/: mod.rs
base_code/src/d_control_flow/: mod.rs
base_code/src/j_enums/: enums_example.rs
base_code/src/k_match/: match_example.rs  mod.rs
base_code/src/l_if_let/: if_let_example.rs  mod.rs
base_code/src/m_collections/: mod.rs  vector_test.rs
base_code/src/n_string/: string_test.rs
base_code/src/o_hashmap/: hashmap_test.rs  mod.rs
base_code/src/p_panic/: example_panic.rs  example_panic_simple.rs  mod.rs
base_code/src/r_generics/: example_test.rs  example_test_2.rs  mod.rs
base_code/src/s_trait/: example_01.rs
base_code/src/t_lifetimes/: example_01.rs  mod.rs
base_code/src/u_iterator/: example.rs
base_code/src/y_oop/: mod.rs  (+2 more)
closures_test/: Cargo.toml
closures_test/src/: main.rs
hello_web/: 404.html  hello.html
hello_web/src/: lib.rs  main.rs
learn_crate/: Cargo.toml
minigrep/: output.txt
minigrep/src/: lib.rs  main.rs
restaurant/: Cargo.toml
restaurant/src/: front_of_house.rs  lib.rs
restaurant/tes_code/: test_01.rs  test_02.rs  test_04.rs  test_05.rs  test_06.rs
src/: main.rs
src/0x02_data_type/: mod.rs
src/0x05_loops/: demo.rs
src/0x08_slice/: mod.rs
src/0x09_struct/: fun_struct.rs
src/0x0A_enums/: enums_example.rs  mod.rs
src/e_loops/: mod.rs
src/f_ownership/: mod.rs
src/g_quote_borrow/: mod.rs
src/i_struct/: mod.rs
(+16 files in other folders)
