[package]
name = "learn_rust"
version = "0.1.0"
authors = ["AH_Pirate <15212726737@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[workspace]
members=[
    "restaurant",
    "minigrep",
    "learn_crate",
    "closures_test",
    "base_code",
    "adder"
]